<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

<!--    TODO: Agregar title a strings.xml-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_MyProfile"
            android:icon="@drawable/ic_user"
            android:title="@string/mi_perfil" />
        <item
            android:id="@+id/menu_Coach"
            android:icon="@drawable/ic_whistle"
            android:title="@string/entrenador" />
        <item
            android:id="@+id/menu_Veterinarian"
            android:icon="@drawable/ic_paw"
            android:title="@string/veterinario" />

        <item
            android:id="@+id/menu_Store"
            android:icon="@drawable/ic_store"
            android:title="@string/mercado" />

        <item
            android:id="@+id/menu_Community"
            android:icon="@drawable/ic_discusion"
            android:title="@string/comunidad" />

        <item
            android:id="@+id/menu_LogOut"
            android:icon="@drawable/ic_logout"
            android:title="@string/cerrar_sesion" />
    </group>
</menu>