<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn"
    android:background="@drawable/fondo">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="30dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="170dp"
                android:src="@drawable/logotipo"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iniciar_sesion"
                android:textColor="@color/white"
                android:textSize="36dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/logIn_eTXTemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:hint="@string/correo_electronico"
                    android:textColorHint="#80FFFFFF"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"
                    android:textIsSelectable="true"/>

                <EditText
                    android:id="@+id/logIn_eTXTpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:hint="@string/contrasena"
                    android:textColorHint="#80FFFFFF"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    android:textIsSelectable="true"/>

                <Button
                    android:id="@+id/lognIn_BTNlognIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/iniciar_sesion"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="150dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="50dp"
                    android:layout_marginHorizontal="25dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/o"
                        android:textSize="20dp"
                        android:textColor="@color/white"
                        android:layout_marginHorizontal="10dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:layout_gravity="center"/>
                </LinearLayout>

                <Button
                    android:id="@+id/lognIn_BTNsignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registrate_"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>